# src/doc/swagger/common/responses.yml
@@ -3,86 +3,83 @@ definitions:
     description: "The response body when the resource that was previously requested to update was not modified"
     type: "object"
     properties:
-      code:
+      statusCode:
         type: "integer"
         enum:
         - 304
       message:
         type: "string"
         example: "The requested resource was not modified"
-      details:
-        type: "string"
-        example: "No new value was provided"
   BadRequest400Response:
     description: "The response body when the request is invalid"
     type: "object"
     properties:
-      code:
+      statusCode:
         type: "integer"
         enum:
         - 400
-      message:
+      error:
         type: "string"
-        example: "Failed to create a new recurrent task"
-      details:
+        example: "Bad Request"
+      message:
         type: "string"
         example: "The 'name' field is missing"
   Unauthorized401Response:
     description: "The response body when the requesting agent is not authorized"
     type: "object"
     properties:
-      code:
+      statusCode:
         type: "integer"
         enum:
         - 401
-      message:
+      error:
         type: "string"
-        example: "Could not create a new recurrent task"
-      details:
+        example: "Unauthorized"
+      message:
         type: "string"
         example: "You are not authorized to perform the action"
   ForbiddenAccess403Response:
     description: "The response body when the requesting agent does not have sufficient permission"
     type: "object"
     properties:
-      code:
+      statusCode:
         type: "integer"
         enum:
         - 403
-      message:
+      error:
         type: "string"
-        example: "Failed to get recurrent task information"
-      details:
+        example: "Forbidden"
+      message:
         type: "string"
         example: "You do not have sufficient permission"
   ResourceNotFound404Response:
     description: "The response body when a requested resource is not found"
     type: "object"
     properties:
-      code:
+      statusCode:
         type: "integer"
         enum:
         - 404
+      error:
+        type: "string"
+        example: "Not Found"
       message:
         type: "string"
-        example: "Error while getting recurrent task information"
-      details:
-        type: "string"
-        example: "Recurrent task with the requested UID was not found"
+        example: "Resource with the requested ID was not found"
   ServerError5XXResponse:
     description: "The response body when an unexpected error occurs in the server"
     type: "object"
     properties:
-      code:
+      statusCode:
         type: "integer"
         enum:
         - 500
         - 501
         - 502
         - 503
-      message:
+      error:
         type: "string"
-        example: "Error while getting recurrent task information"
-      details:
+        example: "Internal Server Error"
+      message:
         type: "string"
         example: "An unexpected error happened on our side"
